--- a/assessment/src/main/resources/application.properties
+++ b/assessment/src/main/resources/application.properties
@@ -7,6 +7,11 @@ spring.h2.console.path=/h2-console
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.enabled=true
+spring.autoconfigure.exclude=\
+  org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
+server.port=8081
 
-server.port=8080
 
